# oh-my-codex-app-server

./: README.md  justfile
.agents/: PHASE0-SEAM-MAP.md
.githooks/: pre-push
.github/workflows/: README.md  bazel.yml  runtime-layer1.yml  rust-ci-full.yml  sdk.yml  v8-canary.yml
.gstack/qa-reports/: qa-report-layer1-runtime-error-contract-2026-06-04.md  qa-report-layer1-runtime-extensions-2026-06-03.md
codex-rs/: Cargo.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-sdk/: Cargo.toml  README.md
codex-rs/app-server-sdk/src/: lib.rs
codex-rs/app-server-sdk/tests/: builder.rs  layer2_agent_server.rs
codex-rs/app-server/src/: in_process.rs  lib.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs
codex-rs/app-server/tests/common/: test_app_server.rs
codex-rs/codex-api/src/: common.rs  lib.rs
codex-rs/codex-api/tests/: sse_end_to_end.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: client.rs  client_tests.rs  codex_delegate.rs  compact_remote_v2.rs  lib.rs  prompt_debug.rs  runtime_context.rs  runtime_usage.rs  thread_manager.rs  thread_manager_tests.rs
codex-rs/core/tests/: responses_headers.rs
codex-rs/memories/write/: Cargo.toml
codex-rs/runtime-api/: BUILD.bazel  Cargo.toml  README.md
codex-rs/runtime-api/src/: context.rs  error.rs  ids.rs  lib.rs  model.rs  registry.rs  tool.rs  usage.rs
codex-rs/runtime-api/tests/: registry_tests.rs
docs/: layer2-app-server-sdk.md
scripts/: test_verify_layer1_ci.py  verify_layer1_ci.py
(+22 files in other folders)
