[package]
name = "codex-app-server-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_app_server_sdk"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-app-server = { workspace = true }
codex-app-server-client = { workspace = true }
codex-runtime-api = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
codex-app-server-protocol = { workspace = true }
codex-arg0 = { workspace = true }
codex-config = { workspace = true }
codex-core = { workspace = true }
codex-exec-server = { workspace = true }
codex-feedback = { workspace = true }
codex-protocol = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
