[package]
edition.workspace = true
license.workspace = true
name = "codex-runtime-api"
version.workspace = true

[lib]
doctest = false
name = "codex_runtime_api"
path = "src/lib.rs"
test = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio-test = { workspace = true }
